working on modelyn and its tests: introduced test output data in the source tree